# bitboard-chess

./: .gitignore  CMakeLists.txt  Makefile  board.cpp  board.h  main.cpp
.github/workflows/: ci.yml
src/: bitboard.cpp  bitboard.h  board.cpp  board.h  main.cpp  movegen.cpp  movegen.h  perft.cpp  perft.h  position.cpp  position.h  types.cpp  types.h
tests/: run_perft_tests.sh
